[gd_scene load_steps=2 format=3 uid="uid://shop_ui_scene"]

[ext_resource type="Script" path="res://ui/ShopUI.gd" id="1_script"]

[node name="ShopUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ðŸ›’ UPGRADE SHOP"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ’Ž 0 Abyss Shards"

[node name="UpgradesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "â–¶ CONTINUE TO DIVE"
